--- a/20230621MouseMov/style.css
+++ b/20230621MouseMov/style.css
@@ -64,6 +64,9 @@ html, body {
 }
 
 #app .bubble {
+  position: fixed;
+  top:0;
+  left:0;
   display: block;
   width: var(--size);
   height: var(--size);
