--- a/20230621MouseMov/style.css
+++ b/20230621MouseMov/style.css
@@ -77,7 +77,7 @@ html, body {
 
 #app .bubble.active {
   opacity: 1;
-  animation: bubble 1s ease-in-out forwards;
+  animation: bubble 500ms ease-in-out forwards;
 }
 
 @keyframes bubble {
@@ -85,8 +85,12 @@ html, body {
     opacity: 0;
     transform: scale(0);
   }
-  100% {
+  50% {
     opacity: 1;
+
+  }
+  100% {
+    opacity: 0;
     transform: scale(1.5);
   }
 }
