--- a/20230622Dataset/style.css
+++ b/20230622Dataset/style.css
@@ -32,8 +32,16 @@ html, body {
   width: 100%;
   height: 36px;
   background-color: gray;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
+  position: relative;
+  overflow: hidden;
 }
 .container .graph .bar {
-
+  position: absolute;
+  top:0;
+  left:0;
+  content: ''; /*absolute*/
+  width: 100%;
+  height: 36px;
+  background-color: white;
 }
