--- a/20230622Dataset/style.css
+++ b/20230622Dataset/style.css
@@ -41,7 +41,8 @@ html, body {
   top:0;
   left:0;
   content: ''; /*absolute*/
-  width: 100%;
+  width: 50%;
   height: 36px;
   background-color: white;
+  border-radius: 1rem;
 }
