--- a/20230623SetInterval/style.css
+++ b/20230623SetInterval/style.css
@@ -21,9 +21,11 @@ button {
   border: 0;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-
+  cursor: pointer;
 }
-
+button:active {
+  box-shadow: 0 0 0 3px gray;
+}
 button#start {
   background-color: hsl(0, 0%, 0%);
   color: antiquewhite;
