--- a/20230623TodoList/style.css
+++ b/20230623TodoList/style.css
@@ -17,12 +17,100 @@ html, body {
   font-family: 'Ansungtangmyun-Bold', sans-serif;
 }
 
-#app {}
-.list-container {}
-#header {}
-.input-wrapper {}
-#add-todo {}
-#add-button {}
-#list {}
-.list-item {}
-.list-delete {}
+#app {
+  display: flex;
+  background-color: hsla(49, 100%, 50%, 0.938);
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+}
+
+.list-container {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  width: 100%;
+  max-width: 600px;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+#header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+#header h1 {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+#header .input-wrapper {
+  display: flex;
+  width: 100%;
+  border-radius: 1rem;
+  border: 1px solid hsla(49, 100%, 50%, 0.938);
+  /* overflow: hidden; */
+}
+#header .input-wrapper #add-todo {
+  width: 100%;
+  border: 0;
+  padding: 0.5rem;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+#header .input-wrapper #add-todo:focus {
+  outline: 0;
+  box-shadow: 0 0 0 3px hsla(49, 100%, 50%, 0.938); /* border 값에 영향 x */
+}
+#header .input-wrapper #add-button {
+  border: 0;
+  padding: 0.5rem 1rem;
+  min-width: 80px;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  background-color: hsla(49, 100%, 50%, 0.938);
+  color: hsla(9, 100%, 50%, 0.938);
+  font-weight: 600;
+  cursor: pointer;
+}
+#header .input-wrapper #add-button:active {
+  background-color: hsla(49, 100%, 62%, 0.938);
+}
+
+#list {
+  display: flex;
+  list-style: none;
+  padding-top: 0.5rem;
+}
+#list .list-item {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  position: relative;
+  padding-left: 3rem;
+  align-items: center;
+}
+#list .list-item::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: url('https://api.iconify.design/ci/wavy-check.svg?color=red') no-repeat 0 center / contain; /* alt + z 자동 줄바꿈 */
+}
+#list .list-item .list-delete {
+  display: flex;
+  width: 36px;
+  height: 36px;
+  background-color: hsla(9, 100%, 50%, 0.938);
+  color: #fff;
+  border: 0;
+  align-items: center;
+  justify-content: center;
+  border-radius: 36px;
+}
