--- a/20230626test2/style.css
+++ b/20230626test2/style.css
@@ -9,3 +9,18 @@ html, body {
   height: 100%;
 }
 
+main {
+  padding: 1rem;
+}
+
+h1 {
+  padding-bottom: 1rem;
+}
+
+#title {
+  font-size: 16px;
+}
+
+#title.active {
+  color: red;
+}
