--- a/20230626Accordion/_list.scss
+++ b/20230626Accordion/_list.scss
@@ -21,12 +21,11 @@
   }
   &__button {
     display: flex;
-    justify-content: space-between;
     border: 0;
     padding: 1rem;
-    margin-bottom: 1rem;
     background-color: #fff;
     cursor: pointer;
+    justify-content: space-between;
     .icon { // 자식요소
       transform: rotate(0deg);
     }
@@ -35,7 +34,7 @@
     }
   }
   &__content {
-    display: flex;
+    display: none;
     padding: 1rem;
   }
 }
