--- a/20230627SwitchToggle/style.css
+++ b/20230627SwitchToggle/style.css
@@ -9,3 +9,38 @@ html, body {
   height: 100%;
 }
 
+.toggle-container {
+  width: 100px;
+  height: 48px;
+  background-color: black;
+  display: block;
+  border-radius: 48px;
+  position: relative;
+}
+.toggle-container label {
+  display: block;
+  text-indent: -9999px; /* 옆으로 넘어가면서 안 보이게 하는 */
+  /* height: 0; */
+  font-size: 0;
+  width: 100%;
+  height: 48px;
+  border-radius: 48px;
+  background-color: gray;
+  position: absolute;
+  top:0;
+  left:0;
+}
+.toggle-container input#toggle {
+  display: none;
+}
+.toggle-container .switch {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 44px;
+  height: 44px;
+  display: block;
+  background-color: #fff;
+  border-radius: 48px;
+}
+
