--- a/20230627SwitchToggle/style.css
+++ b/20230627SwitchToggle/style.css
@@ -17,6 +17,9 @@ html, body {
   border-radius: 48px;
   position: relative;
 }
+.toggle-container.active {
+  background-color: gray;
+}
 .toggle-container label {
   display: block;
   text-indent: -9999px; /* 옆으로 넘어가면서 안 보이게 하는 */
@@ -25,10 +28,11 @@ html, body {
   width: 100%;
   height: 48px;
   border-radius: 48px;
-  background-color: gray;
+  /* background-color: gray; */
   position: absolute;
   top:0;
   left:0;
+  z-index: 1;
 }
 .toggle-container input#toggle {
   display: none;
@@ -42,5 +46,10 @@ html, body {
   display: block;
   background-color: #fff;
   border-radius: 48px;
+  z-index: 0;
+  transition: all 500ms ease-in-out;
 }
 
+input#toggle:checked + .switch {
+  left: 54px;
+}
