--- a/20230627Snow/style.css
+++ b/20230627Snow/style.css
@@ -10,6 +10,29 @@ html, body {
   background-color: hsl(220,60%,15%);
 }
 
-.wrapper {
-  
+#wrapper {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.snow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 3px;
+  height: 3px;
+  background-color: white;
+  border-radius: 3px;
+  animation: snowfall 5s infinite forwards linear;
+} /* infinite 영원 */
+@keyframes snowfall {  /* animation */
+  0% {
+    top:-10px; /* 보이지 않는 구역부터 떨어지게끔 */
+  }
+  100% {
+    top:100%;
+  }
 }
