--- a/20230627Snow/style.css
+++ b/20230627Snow/style.css
@@ -26,9 +26,15 @@ html, body {
   height: 3px;
   background-color: white;
   border-radius: 3px;
-  animation: snowfall 5s infinite forwards linear;
-} /* infinite 영원 */
-@keyframes snowfall {  /* animation */
+  /* animation: snowfall 5s infinite forwards linear; */
+  animation-name: snowfall;
+  /* animation-duration: 3s; */
+  animation-iteration-count: infinite; /* infinite 영원 */
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  /* animation-delay: 10s; */
+}
+@keyframes snowfall {  /* animation-name */
   0% {
     top:-10px; /* 보이지 않는 구역부터 떨어지게끔 */
   }
