--- a/20230628AOS/style.css
+++ b/20230628AOS/style.css
@@ -9,7 +9,30 @@ html, body {
   height: 100%;
 }
 
-main {}
-section {}
-section p {}
+main {
+  background-image: url('https://images.pexels.com/photos/1028600/pexels-photo-1028600.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  padding: 3rem; /* 16px x 3 = 48px */
+}
+/* 홀수 odd 좌측 정렬, 짝수 even 우측 정렬  */
+section:nth-child(even) {
+  justify-content: flex-end;
+}
+section p {
+  width: 50ch; /* 50글자 */ /* 35~50글자 이내가 좋다 */
+  font-size: 2rem;
+  color: antiquewhite;
+  text-shadow: 0 1px 2px black;
+}
+
 
