--- a/20230628AOS/style.css
+++ b/20230628AOS/style.css
@@ -23,6 +23,7 @@ section {
   width: 100%;
   height: 100vh;
   padding: 3rem; /* 16px x 3 = 48px */
+  overflow-x: hidden;
 }
 /* 홀수 odd 좌측 정렬, 짝수 even 우측 정렬  */
 section:nth-child(even) {
@@ -31,8 +32,8 @@ section:nth-child(even) {
 section p {
   width: 50ch; /* 50글자 */ /* 35~50글자 이내가 좋다 */
   font-size: 2rem;
-  color: antiquewhite;
-  text-shadow: 0 1px 2px black;
+  color: black;
+  text-shadow: 1px 1px 3px white;
 }
 
 
