--- a/REACT/examreact/src/components/Button.module.css
+++ b/REACT/examreact/src/components/Button.module.css
@@ -2,7 +2,12 @@
 
 .button {
   display: flex;
+  margin: 0.2rem;
   padding: 0.5rem 1rem; /* 1rem = 16px */
   border: 1px solid black;
   background-color: transparent;
+}
+.button.primary {
+  background-color: black;
+  color: white;
 }
