--- a/20230703반응형(calc)/style.css
+++ b/20230703반응형(calc)/style.css
@@ -4,6 +4,56 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: #333;
+}
+
 body {
-  
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  /* padding-top: 1px; */
+  background-color: #e5e5e5;
+  border: 1px solid transparent;
+}
+
+/* 마진 상쇄 현상 */
+/* 인접해 있는 블록 요소 두 개가 겹칠 때 발생 */
+/* 사이에 1px이라도 간격이 생기면 마진 상쇄 현상이 사라진다. */
+/* 일종의 오류 */
+/* 인접 요소 및 빈 요소의 상하 마진이 겹칠 때 */
+
+.title {
+  width: 250px;
+  margin: 30px 0 10px 10px;
+  padding: 20px;
+  color: #fff;
+  background-color: #06c;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.menu_box {
+  display: inline-block;
+  width: calc((100% - 80px)/4);
+  /* 마진 값 : 4개 합쳐서 80 */
+  border: 1px solid red;
+}
+
+.img_box img {
+  width: 200px;
+}
+
+.menu_title {
+  padding: 10px 0;
+}
+
+.menu_info {
+  display: flex;
+  justify-content: space-between;
 }
