--- a/20230703반응형(calc)/style.css
+++ b/20230703반응형(calc)/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 90%;
   margin: 0 auto;
   /* padding-top: 1px; */
   background-color: #e5e5e5;
@@ -33,14 +33,20 @@ body {
   margin: 30px 0 10px 10px;
   padding: 20px;
   color: #fff;
-  background-color: #06c;
+  background-color: black;
   text-align: center;
   border-radius: 10px;
 }
 
+.menu_box_wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .menu_box {
   display: inline-block;
-  width: calc((100% - 80px)/4);
+  width: calc((100% - 100px)/4);
   /* 마진 값 : 4개 합쳐서 80 */
   margin: 20px 10px;
   padding: 10px;
@@ -94,4 +100,35 @@ body {
 .count {
   font-size: 14px;
   color: #666;
+}
+
+
+
+
+@media screen and (max-width: 1200px) {
+
+  .menu_box {
+    width: calc((100% - 80px)/3);
+  }
+
+}
+
+
+
+@media screen and (max-width: 768px) {
+
+  .menu_box {
+    width: calc((100% - 60px)/2);
+  }
+
+}
+
+
+
+@media screen and (max-width: 560px) {
+
+  .menu_box {
+    width: calc(100% - 40px);
+  }
+
 }
