--- a/20230705 Github Profile/images/style.css
+++ b/20230705 Github Profile/images/style.css
@@ -7,5 +7,111 @@
 html, body {
   width: 100%;
   height: 100%;
+  background-color: #333;
 }
 
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+.wrapper {
+  
+}
+
+a, a:visited, a:hover, a:active {
+  color: inherit;
+}
+
+.kai img {
+  position: fixed;
+  top: 50px;
+  right: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.hidden {
+  /* display: none; */
+}
+
+hr {
+  margin: 5px 0;
+  opacity: 40%;
+}
+
+.arrow {
+  position: fixed;
+  top: 140px;
+  right: 90px;
+  width: 0;
+  height: 0;
+  z-index: 1;
+  border-bottom: 10px solid white;
+  border-top: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-left: 10px solid transparent;
+}
+
+.drawer-menu {
+  position: fixed;
+  top: 160px;
+  right: 50px;
+  width: 200px;
+  border-radius: 5px;
+  color: #333;
+  background-color: #fff;
+  overflow: hidden;
+}
+.drawer-menu:hover {
+  transform: translateY(2px);
+}
+.drawer-menu:hover +.arrow {
+  transform: translateY(2px);
+}
+.drawer-menu li {
+  padding: 10px 20px;
+}
+.drawer-menu li:hover {
+  color: white;
+  background-color: rgb(1, 111, 255);
+}
+
+.drawer-menu-title {
+  padding: 20px 0 10px 20px;
+}
+.drawer-menu-title a {
+  font-weight: 700;
+}
+.drawer-menu-title a:hover {
+  font-size: large;
+  text-decoration: underline;
+  opacity: 0.5;
+}
+
+.drawer-menu-your {
+
+}
+.drawer-menu-your-content {
+
+}
+
+.drawer-menu-settings {
+
+}
+.drawer-menu-settings-content {
+
+}
+
+.logout {
+  padding: 10px 0 20px 20px;
+}
+.logout:hover {
+  color: white;
+  background-color: rgb(1, 111, 255);
+}
