✨ translateX 좌표 이동 script 코드 작성

--- a/20230706slide/slide1/style.css
+++ b/20230706slide/slide1/style.css
@@ -17,7 +17,7 @@ li {
   /* viewport width *3 (사진 개수) */
   width: 300vW;
   height: 600px;
-  transform: translateX(-100vw);
+  /* transform: translateX(-200vw); */
   transition: transform 1s;
 }
 
@@ -49,4 +49,3 @@ li {
 .btn-group button:last-child {
   margin-right: 0;
 }
-
