--- a/20230706slide/slide2/style.css
+++ b/20230706slide/slide2/style.css
@@ -3,3 +3,57 @@
   padding: 0;
 }
 
+li {
+  list-style: none;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.slide-wrapper {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.slide-list {
+  display: flex;
+  width: 300vw;
+  height: 100vh;
+  transition: transform 1s;
+}
+
+.slide-list li {
+  width: 100vw;
+  height: 100vh;
+}
+
+.slide-list li img {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.btn-group {
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btn-group button {
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+  border: none;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.btn-group button:last-child {
+  margin-right: 0;
+}
+
+.btn-group button:hover {
+  box-shadow: 2px 2px 3px #888;
+}
