--- a/Project01/style.css
+++ b/Project01/style.css
@@ -25,24 +25,28 @@ html, body {
   height: 50px;
   border-radius: 5px;
   background-color: blue;
+  box-shadow: 2px 1px 2px 1px black;
 }
 .main-board .white {
   width: 30px;
   height: 15px;
   border-radius: 3px;
   background-color: #fff;
+  box-shadow: 2px 1px 2px 1px black;
 }
 .main-board .yellow {
   width: 30px;
   height: 15px;
   border-radius: 3px;
   background-color: yellow;
+  box-shadow: 2px 1px 2px 1px black;
 }
 .main-board .red {
   width: 30px;
   height: 15px;
   border-radius: 3px;
   background-color: red;
+  box-shadow: 2px 1px 2px 1px black;
 }
 .main-leg {
   display: flex;
