--- a/20230706slide/slide3/style.css
+++ b/20230706slide/slide3/style.css
@@ -4,11 +4,6 @@
   box-sizing: border-box;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
 li {
   list-style: none;
 }
@@ -18,8 +13,6 @@ li {
 }
 
 .slide-wrapper {
-  width: 100vw;
-  height: 100vh;
   overflow: hidden;
 }
 
@@ -32,19 +25,37 @@ li {
 
 .slide-list li {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
 .slide-list li img {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
+
+.btn-group button {
+  border: none;
+  border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* 내 코드 위치 조절 */
 
 .side-button-left {
   position: absolute;
   left: 30px;
-  top: 50%;
+  top: 70%;
   transform: translateY(-50%);
   color: #fff;
   opacity: 0.5;
@@ -55,7 +66,7 @@ li {
 .side-button-right {
   position: absolute;
   right: 30px;
-  top: 50%;
+  top: 70%;
   transform: translateY(-50%);
   color: #fff;
   opacity: 0.5;
