--- a/20230706slide/slide3/style.css
+++ b/20230706slide/slide3/style.css
@@ -35,19 +35,23 @@ li {
 }
 
 .btn-group button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
   border: none;
   border-radius: 50%;
+  background-color: rgba(255,255,255,0.5);
 }
 
+.prev {
+  left: 30px;
+}
 
-
-
-
-
-
-
-
-
+.next {
+  right: 30px;
+}
 
 
 /* 내 코드 위치 조절 */
