--- a/20230711_HSFF실습/style.css
+++ b/20230711_HSFF실습/style.css
@@ -4,3 +4,50 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+li {
+  list-style: none;
+}
+
+.visually-hidden {
+  display: none;
+}
+
+.log-in-bar {
+  display: flex;
+  justify-content: right;
+  padding: 20px 0;
+}
+.log-in-bar > div {
+  padding-right: 20px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px 0;
+}
+
+.logo {
+  
+}
+
+.gnb {
+  display: flex;
+}
+.gnb > li {
+  padding-right: 30px;
+}
+
+.sub {
+  display: none;
+}
+
+.lnb-icon {
+  display: none;
+}
+
