--- a/20230711_HSFF실습/style.css
+++ b/20230711_HSFF실습/style.css
@@ -6,7 +6,6 @@
 
 a {
   text-decoration: none;
-  color: black;
 }
 
 li {
@@ -26,7 +25,22 @@ li {
   padding-right: 20px;
 }
 
+header {
+  position: relative;
+  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.5);
+}
+
+header a {
+  color: black;
+}
+
+nav {
+
+}
+
 .container {
+  position: sticky;
+  top:0;
   display: flex;
   justify-content: space-evenly;
   padding: 20px 0;
@@ -47,7 +61,123 @@ li {
   display: none;
 }
 
+.sub::before {
+  content: '';
+  width: 3px;
+  height: 3px;
+  text-align: center;
+  background-color: black;
+}
+
+.active {
+  display: block;
+}
+
 .lnb-icon {
   display: none;
 }
 
+
+
+#app {
+  position: relative;
+}
+
+.slide {
+  overflow: hidden;
+}
+
+.slide-list {
+  display: flex;
+  width: 300vw;
+  height: 100vh;
+  transition: transform 800ms ease-in-out;
+}
+
+.slide-item {
+  width: 100vw;
+  height: 100%;
+}
+
+.slide-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.btn-group {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.btn-group button {
+  padding: 20px 0;
+  border: none;
+  color: white;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.btn2::before {
+  content: '　ㅣ　';
+}
+.btn2::after {
+  content: '　ㅣ　';
+}
+
+
+.gloobal-footer {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  padding: 20px 0;
+  color: gray;
+  background-color: #414244;
+}
+.gloobal-footer a {
+  color: gray;
+}
+
+.global-left {
+  display: flex;
+}
+.global-left > p {
+  padding-right: 10px;
+}
+.global-left > p:nth-child(2) {
+  font-weight: 700;
+}
+.global-left > p:nth-child(2) a {
+  color: white;
+}
+.global-left > p:last-child {
+  padding-right: 0;
+}
+
+.global-right {
+  display: flex;
+}
+.global-right > p {
+  padding-right: 10px;
+}
+.global-right > p:nth-child(2) a {
+  color: white;
+}
+
+.gloobal-footer-bottom .logo {
+  padding-bottom: 20px;
+  opacity: 0.5;
+}
+
+.gloobal-footer-bottom {
+  padding: 40px;
+  color: rgb(133, 132, 132);
+  background-color: #2d2d30;
+}
+
+.gloobal-footer-bottom span:not(:last-child)::after {
+  content: '　/　';
+}
