--- a/20230711_HSFF실습/style.css
+++ b/20230711_HSFF실습/style.css
@@ -133,7 +133,7 @@ li {
   display: flex;
   width: 300vw;
   height: 600px;
-  transition: all 500ms ease-in-out;
+  transition: transform 500ms ease-in-out;
 }
 
 .slide-list li {
