--- a/20230711_HSFF실습/style.css
+++ b/20230711_HSFF실습/style.css
@@ -338,4 +338,18 @@ footer {
   .sidebar-item:first-child a {
     border-top: 1px solid #ccc;
   }
+
+  .foot-left li a {
+    font-size: 16px;
+  }
+
+  .foot-right {
+    justify-content: space-evenly;
+    font-size: 14px;
+  }
+
+  .foot-right .time {
+    font-size: 12px;
+  }
+  
 }
