--- a/Project01/style.css
+++ b/Project01/style.css
@@ -55,3 +55,41 @@ html, body {
 .main-leg span {
   border: 3mm ridge rgb(65, 55, 4);
 }
+
+
+
+
+
+/* 
+#wrapper {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.snow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 3px;
+  height: 3px;
+  background-color: white;
+  border-radius: 3px;
+  /* animation: snowfall 5s infinite forwards linear; */
+  animation-name: snowfall;
+  /* animation-duration: 3s; */
+  animation-iteration-count: infinite; /* infinite 영원 */
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  /* animation-delay: 10s; */
+}
+@keyframes snowfall {  /* animation-name */
+  0% {
+    top:-10px; /* 보이지 않는 구역부터 떨어지게끔 */
+  }
+  100% {
+    top:100%;
+  }
+} */
