--- a/20230711_HSFF실습/style.css
+++ b/20230711_HSFF실습/style.css
@@ -275,12 +275,100 @@ footer {
 
 
 
+.modal {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 500px;
+  padding-top: 30px;
+  border: 2px solid black;
+  background-color: #fff;
+  z-index: 100;
+}
+
+.modal-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border: none;
+  background-color: transparent;
+}
+
+.modal h2 {
+  padding: 20px 30px 20px 30px;
+  color:#113676;
+}
+
+.modal img {
+  padding: 0 30px 100px 30px;
+}
+
+.modal-nav {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 15px 70px;
+  font-size: 13px;
+  border: none;
+  color: white;
+  background-color: cadetblue;
+}
+
+.modal-nav:hover {
+  opacity: 0.8;
+}
+
+.modal p {
+  padding: 18px 0 18px 20px;  
+  border-top: 1px solid #b6b6b6;
+  color: #333;
+  background-color:#dfdfdf;
+  position: relative;
+}
+
+
+input[id="modal-chk"] {
+	display: none;
+}
+
+input[id="modal-chk"] + label {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	border: 2px solid #bcbcbc;
+  background-color: #fff;
+	cursor: pointer;
+}
+
+input[id="modal-chk"]:checked + label::after {
+  content:'✔';
+  font-size: 15px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: -10%;
+  transform: translateY(-50%);
+}
+
+.modal span {
+  padding-left: 28px;
+  font-size: 12px;
+}
+
+
 
 @media screen and (max-width : 1200px) {
   .lg-hidden {
     display: block;
   }
-
+  
   .lg-only {
     display: none;
   }
