--- a/20230711_HSFF실습/style.css
+++ b/20230711_HSFF실습/style.css
@@ -275,7 +275,7 @@ footer {
 
 
 
-.modal {
+.popup {
   position: absolute;
   top: 100px;
   left: 50%;
@@ -287,24 +287,53 @@ footer {
   z-index: 100;
 }
 
-.modal-btn {
+.popup-btn {
   position: absolute;
   top: 20px;
   right: 20px;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
-.modal h2 {
+.popup-btn::after,
+.popup-btn::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background-color: black;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transition: transform 0.4s;
+}
+
+.popup-btn::after {
+  transform: translate(-50%,-50%) rotate(-45deg);
+}
+.popup-btn::before {
+  transform: translate(-50%,-50%) rotate(45deg);
+}
+
+.popup-btn:hover::before {
+  transform: skew(45deg,-45deg);
+}
+.popup-btn:hover::after {
+  transform: skew(-45deg,45deg);
+}
+
+
+.popup h2 {
   padding: 20px 30px 20px 30px;
   color:#113676;
 }
 
-.modal img {
+.popup img {
   padding: 0 30px 100px 30px;
 }
 
-.modal-nav {
+.popup-nav {
   position: absolute;
   bottom: 10%;
   left: 50%;
@@ -316,11 +345,11 @@ footer {
   background-color: cadetblue;
 }
 
-.modal-nav:hover {
+.popup-nav:hover {
   opacity: 0.8;
 }
 
-.modal p {
+.popup p {
   padding: 18px 0 18px 20px;  
   border-top: 1px solid #b6b6b6;
   color: #333;
@@ -329,11 +358,11 @@ footer {
 }
 
 
-input[id="modal-chk"] {
+input[id="popup-chk"] {
 	display: none;
 }
 
-input[id="modal-chk"] + label {
+input[id="popup-chk"] + label {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -345,7 +374,7 @@ input[id="modal-chk"] + label {
 	cursor: pointer;
 }
 
-input[id="modal-chk"]:checked + label::after {
+input[id="popup-chk"]:checked + label::after {
   content:'✔';
   font-size: 15px;
   width: 20px;
@@ -357,7 +386,7 @@ input[id="modal-chk"]:checked + label::after {
   transform: translateY(-50%);
 }
 
-.modal span {
+.popup span {
   padding-left: 28px;
   font-size: 12px;
 }
