✨ 1~10까지 count 1씩 증가 후 fadeout

--- a/Javascript/20230718setTimeout setInterval/style.css
+++ b/Javascript/20230718setTimeout setInterval/style.css
@@ -7,8 +7,12 @@
 .count {
   padding: 20px;
   background-color: #ccc;
+  opacity: 1;
+  transition: opacity 500ms ease-in-out;
 }
 
 .count.is-active {
-  display: none;
+  /* display: none; */
+  opacity: 0;
 }
+
