--- a/20230719_img_modal/style.css
+++ b/20230719_img_modal/style.css
@@ -4,3 +4,116 @@
   box-sizing: border-box;
 }
 
+li {
+  list-style: none;
+}
+
+
+
+.modal-list {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 200px;
+  margin: 10px;
+  margin-top: 40px;
+}
+
+.modal-item {
+  width: 200px;
+  height: 200px;
+  margin: 4px;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.modal-item div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+  background-color: rgb(0, 153, 255);
+}
+.modal-item div:hover {
+  border: 1px solid rgb(0, 153, 255);
+  border-radius: 20px;
+  color: rgb(0, 153, 255);
+  background-color: #fff;
+}
+
+.modal-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.modal-item img:hover {
+  opacity: 0.5;
+}
+
+
+.modal-popup {
+  display: none;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40%;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 1px 5px 15px rgba(0,0,0,0.5);
+  z-index: 10;
+}
+
+.modal-popup.show {
+  display: block;
+}
+
+.modal-top {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px;
+  font-weight: 700;
+  border-bottom: 1px solid rgb(209, 208, 208);
+}
+
+.modal-btn {
+  font-size: 18px;
+}
+
+.modal-popup-img {
+  padding: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.modal-popup-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.modal-content {
+  padding: 0 20px 20px 20px;
+}
+
+.modal-overay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 5;
+}
+
+.modal-overay.show {
+  display: block;
+}
