--- a/20230719_img_modal/style.css
+++ b/20230719_img_modal/style.css
@@ -37,6 +37,7 @@ li {
   font-weight: 700;
   color: white;
   background-color: rgb(0, 153, 255);
+  cursor: pointer;
 }
 .modal-item div:hover {
   border: 1px solid rgb(0, 153, 255);
@@ -49,10 +50,12 @@ li {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .modal-item img:hover {
   opacity: 0.5;
+  transition: all 400ms ease-in-out;
 }
 
 
@@ -83,6 +86,7 @@ li {
 
 .modal-btn {
   font-size: 18px;
+  cursor: pointer;
 }
 
 .modal-popup-img {
@@ -116,4 +120,37 @@ li {
 
 .modal-overay.show {
   display: block;
+}
+
+
+.modal-img-popup {
+  display: none;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40%;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 1px 5px 15px rgba(0,0,0,0.5);
+  z-index: 10;
+}
+
+.modal-img-popup.show2 {
+  display: block;
+}
+
+.modal-btn2 {
+  text-align: right;
+  padding: 20px 20px 20px 0;
+  cursor: pointer;
+}
+
+.modal-img-popup img {
+  padding: 0 20px 20px 20px;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+  overflow: hidden;
 }
