--- a/20230719_img_modal/style.css
+++ b/20230719_img_modal/style.css
@@ -8,149 +8,128 @@ li {
   list-style: none;
 }
 
+button {
+  border: none;
+  background-color: transparent;
+}
 
+.wrapper {
+  height: 100vh;
+}
 
 .modal-list {
   display: flex;
   justify-content: center;
-  width: 100vw;
-  height: 200px;
-  margin: 10px;
-  margin-top: 40px;
+  align-items: center;
+  height: 100%;
 }
 
-.modal-item {
+.modal-list li {
   width: 200px;
   height: 200px;
-  margin: 4px;
-  border-radius: 20px;
+  cursor: pointer;
+  border-radius: 10px;
   overflow: hidden;
 }
 
-.modal-item div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  font-size: 18px;
-  font-weight: 700;
-  color: white;
-  background-color: rgb(0, 153, 255);
-  cursor: pointer;
+/* ----------------  not(,) 다수 지정은 쉼표 */
+/* last-child 빼고 나머지 li들에 적용하는 코드 */
+.modal-list li:not(:last-child) {
+  margin-right: 8px;
 }
-.modal-item div:hover {
-  border: 1px solid rgb(0, 153, 255);
-  border-radius: 20px;
-  color: rgb(0, 153, 255);
+
+.open-btn {
+  color: white;
+  background-color: dodgerblue;
+  text-align: center;
+  line-height: 200px;
+  font-weight: 700;
+  transition: all 300ms ease-in-out;
+}
+.open-btn:hover {
+  border: 1px solid dodgerblue;
+  color: dodgerblue;
   background-color: #fff;
 }
 
-.modal-item img {
+.modal-list img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  cursor: pointer;
+  transition: opacity 300ms ease-in-out;
 }
-
-.modal-item img:hover {
+.modal-list img:hover {
   opacity: 0.5;
-  transition: all 400ms ease-in-out;
 }
 
-
-.modal-popup {
-  display: none;
+.modal {
   position: absolute;
-  top: 20%;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
-  width: 40%;
-  border-radius: 10px;
+  z-index: 200;
+  width: 500px;
+  transform: translate(-50%,-50%);
   background-color: #fff;
-  box-shadow: 1px 5px 15px rgba(0,0,0,0.5);
-  z-index: 10;
+  border-radius: 8px;
+  box-shadow: 0 10px 18px rgba(0,0,0,0.5);
+  display: none;
 }
 
-.modal-popup.show {
-  display: block;
-}
-
-.modal-top {
+.modal-head {
   display: flex;
   justify-content: space-between;
-  padding: 25px;
-  font-weight: 700;
-  border-bottom: 1px solid rgb(209, 208, 208);
-}
-
-.modal-btn {
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.modal-popup-img {
   padding: 20px;
-  border-radius: 10px;
-  overflow: hidden;
+  font-weight: 700;
+  border-bottom: 1px solid #ccc;
 }
 
-.modal-popup-img img {
+.close-btn {
+  font-size: 20px;
+}
+
+.modal-sec {
+  padding: 20px;
+}
+
+.modal-sec img {
   width: 100%;
-  height: 100%;
-  border-radius: 5px;
+  height: 200px;
   object-fit: cover;
 }
 
-.modal-content {
-  padding: 0 20px 20px 20px;
+.modal-sec p {
+  margin-top: 10px;
 }
 
-.modal-overay {
+.img-modal-box {
   display: none;
+  padding: 20px;
+}
+
+.img-modal-btn {
+  float: right;
+}
+
+.img-modal-wrapper {
+  height: 400px;
+  overflow: hidden;
+  clear: right;
+}
+
+.img-modal-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-top: 10px;
+}
+
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: black;
-  opacity: 0.5;
-  z-index: 5;
-}
-
-.modal-overay.show {
-  display: block;
-}
-
-
-.modal-img-popup {
   display: none;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 40%;
-  border-radius: 10px;
-  background-color: #fff;
-  box-shadow: 1px 5px 15px rgba(0,0,0,0.5);
-  z-index: 10;
-}
-
-.modal-img-popup.show2 {
-  display: block;
-}
-
-.modal-btn2 {
-  text-align: right;
-  padding: 20px 20px 20px 0;
-  cursor: pointer;
-}
-
-.modal-img-popup img {
-  padding: 0 20px 20px 20px;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  object-fit: cover;
-  overflow: hidden;
+  z-index: 100;
+  background-color: rgba(0,0,0,0.5);
 }
