--- a/20230719_img_modal/style.css
+++ b/20230719_img_modal/style.css
@@ -67,12 +67,12 @@ button {
   top: 50%;
   left: 50%;
   z-index: 200;
+  display: none;
   width: 500px;
   transform: translate(-50%,-50%);
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 10px 18px rgba(0,0,0,0.5);
-  display: none;
 }
 
 .modal-head {
@@ -102,7 +102,6 @@ button {
 }
 
 .img-modal-box {
-  display: none;
   padding: 20px;
 }
 
@@ -133,3 +132,7 @@ button {
   z-index: 100;
   background-color: rgba(0,0,0,0.5);
 }
+
+/* .overlay.is-active {
+  display: block;
+} */
