--- a/20230706slide/slide4(setInterval)/style.css
+++ b/20230706slide/slide4(setInterval)/style.css
@@ -13,12 +13,66 @@ li {
   list-style: none;
 }
 
-a {
-  color: black;
-  text-decoration: none;
+.hidden {
+  display: none;
 }
 
-button {
+.slide-wrapper {
+  display: flex;
+  width: 300vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.slide-item-content {
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  font-size: 48px;
+  font-weight: 700;
+  color: #fff;
+}
+
+
+.slide-btn {
+  position: absolute;
+  top:65%;
+  left:50%;
+  transform: translate(-65%,-50%);
+  display: flex;
+  justify-content: center;
+}
+.slide-btn button {
+  width: 20px;
+  height: 20px;
+  border: 1px solid whitesmoke;
+  border-radius: 50%;
+  background-color: transparent;
+  transition: all 300ms ease-in-out;
+}
+.slide-btn button:not(:last-child) {
+  margin-right: 5px;
+}
+.slide-btn button:hover {
+  background-color: #fff;
+}
+
+
+
+.side-btn button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
   border: none;
+  color:#fff;
+  background-color: transparent;
 }
-
+.left-btn {
+  left: 20px;
+}
+.right-btn {
+  right: 20px;
+}
