✨ slide4 setInterval 기능 구현 완료

--- a/20230706slide/slide4(setInterval)/style.css
+++ b/20230706slide/slide4(setInterval)/style.css
@@ -19,6 +19,8 @@ button {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  /* fadeOut, fadeIn 자연스럽게 */
+  background-color: black;
 }
 
 .slide-item {
