--- a/20230724_ScrollEvent/style.css
+++ b/20230724_ScrollEvent/style.css
@@ -4,3 +4,33 @@
   box-sizing: border-box;
 }
 
+button {
+  border: none;
+  background-color: transparent;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  /* width : 100과 동일 */
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 10px 30px;
+}
+
+.logo img {
+  width: 80px;
+  height: 80px;
+}
+
+button i {
+  font-size: 48px;
+}
+
+.box {
+  height: 3000px;
+  background-color: black;
+}
