--- a/20230724_ScrollEvent/style.css
+++ b/20230724_ScrollEvent/style.css
@@ -19,6 +19,7 @@ nav {
   justify-content: space-between;
   background-color: #fff;
   padding: 10px 30px;
+  transition: background-color 300ms ease-in-out;
 }
 
 .logo img {
