--- a/20230724_ScrollEvent/style.css
+++ b/20230724_ScrollEvent/style.css
@@ -17,7 +17,7 @@ nav {
   right: 0;
   display: flex;
   justify-content: space-between;
-  background-color: #fff;
+  background-color: #ccc;
   padding: 10px 30px;
   transition: background-color 300ms ease-in-out;
 }
