--- a/20230724_ScrollEvent/style.css
+++ b/20230724_ScrollEvent/style.css
@@ -17,7 +17,7 @@ nav {
   right: 0;
   display: flex;
   justify-content: space-between;
-  background-color: #ccc;
+  background-color: #e6e6e6;
   padding: 10px 30px;
   transition: background-color 300ms ease-in-out;
   z-index: 1;
@@ -28,7 +28,7 @@ nav {
   top: 105px;
   left: 0;
   width: 0%;
-  border: 2px solid red;
+  border: 1px solid black;
   z-index: 10;
 }
 
@@ -56,12 +56,12 @@ button i:hover {
   right: 0;
   width: 0;
   height: 5px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.25);
 }
 
 .box {
   height: 3000px;
-  background-color: black;
+  background-color: #ccc;
 }
 
 .lorem {
