--- a/20230710_Menu/230725_tabmenu/style.css
+++ b/20230710_Menu/230725_tabmenu/style.css
@@ -4,3 +4,36 @@
   box-sizing: border-box;
 }
 
+li {
+  list-style: none;
+}
+
+
+
+.tab-list {
+  display: flex;
+  padding-top: 50px;
+  padding-left: 30px;
+}
+
+.tab-list li {
+  padding: 8px 10px;
+}
+
+.tab-item:last-child {
+  border-top: 3px solid skyblue;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+
+.tab-list {
+  border-bottom: 1px solid #ccc;
+}
+
+.tab-content {
+  padding: 10px;
+}
+
+.hidden {
+  display: none;
+}
